styling changes, fixed overflow issues

--- a/btkd-redesign/src/components/MainPage/ProjectsArea/AnnouncementsArea.css
+++ b/btkd-redesign/src/components/MainPage/ProjectsArea/AnnouncementsArea.css
@@ -12,6 +12,7 @@
 #announcementsAreaContent{
     display: flex;
     flex-direction: column;
+    overflow-wrap: break-word;
 }
 .projectCard{
     flex-basis: 45%;
